Discovery and multi-version samples