@@ -22,4 +22,44 @@ java -cp .. MyUnsafe
 java -cp .. ReflBytecodeName
 ```
 
-## 
+## `wgjd.discovery`
+
+This example demonstrates how to request and use access to internal modules.
+It is is simplest to use from the command-line as it requires overrides that
+by default your IDE won't have configured. It should be run using Java 11+.
+
+```
+# Commands expect to be run from Ch02 directory, _not_ wgjd.discovery
+cd Ch02
+
+# Compile allowing access to internal modules
+javac -d out/wgjd.discovery \
+  --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=wgjd.discovery \
+  wgjd.discovery/module-info.java \
+  wgjd.discovery/wgjd/discovery/*.java \
+  wgjd.discovery/wgjd/discovery/internal/*
+
+# Run, allowing access to same internal modules we're accessing
+java --module-path out \
+  --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=wgjd.discovery \
+  -m wgjd.discovery/wgjd.discovery.Discovery
+```
+
+## `wgjd.multi-version`
+
+This example demonstrates building a multi-release JAR file from scratch. It may
+be built using Java 11 but the resulting JAR may be used on Java 8 as well.
+
+```
+# Compile the classes for use with Java 8
+javac --release 8 -sourcepath src/main/java/ -d out src/main/java/wgjd2ed/*.java
+
+# Compile the specialized classes for Java 11
+javac --release 11 -sourcepath versions/11 -d out-11 versions/11/wgjd2ed/GetPID.java
+
+# Create the JAR file with class files for both 8 and 11
+jar --create --file pid.jar --main-class=wgjd2ed.Main -C out/ . --release 11 -C out-11/ .
+
+# Runs on either Java 8 or 11, indicates when run on Java 8 that it's doing so
+java -cp pid.jar wgjd2ed.Main
+```
